<!-- 
 a. Assignment : #HW02.
 b. File Name : strings.xml (values/strings.xml).
 c. Full name of the student : Mahalavanya Sriram, Chandan Mannem.
 -->

<resources>
    <string name="app_name">To Do List</string>
    <string name="main_activity_name">To Do List</string>
    <string name="display_activity_name">Display Task</string>
    <string name="create_activity_name">Create Task</string>
    <string name="task_count_label_initial">You have 0 tasks</string>
    <string name="task_count_label_1">You have</string>
    <string name="task_count_label_2">tasks</string>
    <string name="upcoming_task_label">Upcoming Tasks</string>
    <string name="none">None</string>
    <string name="view_task_button">View Tasks</string>
    <string name="create_task_button">Create Task</string>
    <string name="select_task_label">Select Task</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="task_information_label">Task Information</string>
    <string name="name_label">Name:</string>
    <string name="date_label">Date:</string>
    <string name="priority_label">Priority:</string>
    <string name="submit">Submit</string>
    <string name="set_date">Set Date</string>
    <string name="name_hint">Task Name</string>
    <string name="task_empty_toast">Task Name cannot be empty</string>
    <string name="date_empty_toast">Date cannot be empty</string>
    <string name="ok">OK</string>
    <string name="high">High</string>
    <string name="medium">Medium</string>
    <string name="low">Low</string>
    <string name="delete_task_label">Delete Task</string>
    <string name="delete_task_msg">Are you sure you want to delete this task ?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="no_task_created">No Task Created</string>
    <string name="task_deleted_successfully">Task Deleted Successfully</string>
    <string name="task_created_successfully">Task Created Successfully</string>
</resources>